--- a/jupyter-deployment.yaml
+++ b/jupyter-deployment.yaml
@@ -24,4 +24,5 @@ spec:
             mountPath: /home/woori
       volumes: 
         - name: storage-volume 
-          emptyDir: {} 
+          hostPath:
+            path: /data/woori
