--- a/jupyter-deployment.yaml
+++ b/jupyter-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: jupyter-server
     spec:
       containers:
-      - name: jupyter-sv
+      - name: jupyter-server
         image: 192.168.0.230:30002/jupyter-test:v3
         ports:
           - containerPort: 8888
