--- a/jupyter-service.yaml
+++ b/jupyter-service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: jupyter-app
-  name: jupyter-app-svc
+    app: jupyter-server
+  name: jupyter-server-svc
   namespace: aihub-portal
 spec:
   ports:
@@ -12,5 +12,5 @@ spec:
     protocol: TCP
     targetPort: 8888
   selector:
-    app: jupyter-app
+    app: jupyter-server
   type: NodePort
