--- a/jupyter-deployment.yaml
+++ b/jupyter-deployment.yaml
@@ -25,4 +25,4 @@ spec:
       volumes: 
         - name: storage-volume 
          persistentVolumeClaim:
-            claimName: 
+            claimName: jupyter-pv-volume
