--- a/jupyter-storage.yaml
+++ b/jupyter-storage.yaml
@@ -1,14 +1,29 @@
-apiVersion: v1
 kind: PersistentVolume
+apiVersion: v1
 metadata:
   name: jupyter-pv-volume
   labels:
     type: local
+    app: jupyter-server
 spec:
-  storageClassName: localvolumeprovisioner
+  storageClassName: manual
   capacity:
-    storage: 10Gi
+    storage: 5Gi
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   hostPath:
     path: "/pv/jupyter-pv1"
+---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: jupyter-pv-volume
+  labels:
+    app: jupyter-server
+spec:
+  storageClassName: manual
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 5Gi
