--- a/jupyter-deployment.yaml
+++ b/jupyter-deployment.yaml
@@ -24,5 +24,5 @@ spec:
             mountPath: /home/woori
       volumes: 
         - name: storage-volume 
-          persistentVolumeClaim:
-            claimName: jupyter-pv-volume
+          persistentVolume:
+          - name: jupyter-pv-volume
